feat: add a loader component and a try-catch block to the GET request

--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -7,8 +7,8 @@
   color: var(--light);
   margin: 0 auto;
   font-family: var(--primary-font);
-  border-top: 1px solid var(--light-dark);
   padding-top: 1rem;
+  min-height: 100vh;
 }
 
 .search-result__title {
@@ -28,4 +28,8 @@
   padding: 1rem;
   border-top: 1px solid var(--light-dark);
   font-size: 1.5rem;
+}
+
+.list__name {
+  display: inline-block;
 }
