--- a/src/styles/SearchWrap.css
+++ b/src/styles/SearchWrap.css
@@ -1,3 +1,11 @@
 .search-wrap__title {
-  margin-top: 2rem;
+  margin-top: 1rem;
+  align-items: center;
+  text-align: center;
+}
+
+.search-wrap__logo {
+  width: 3rem;
+  filter: brightness(10);
+  margin-left: 1rem;
 }
