--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,19 @@
 }
 
 .App {
+  min-height: 100vh;
+  max-height: fit-content;
   text-align: center;
   background-color: var(--dark);
   color: var(--light);
   font-family: var(--primary-font);
   padding: 2rem 4rem;
+}
+
+.app-crash {
+  background-color: var(--light-dark);
+  color: var(--light);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-top: 10rem;
 }
