feat: add handling the search for a non-existent character

--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -33,3 +33,11 @@
 .list__name {
   display: inline-block;
 }
+
+.search-result__bad {
+  background-color: var(--light-dark);
+  color: var(--light);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-top: 10rem;
+}
