--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,11 @@
 }
 
 .App {
+  display: flex;
   min-height: 100vh;
   max-height: fit-content;
   text-align: center;
   background-color: var(--dark);
   color: var(--light);
   font-family: var(--primary-font);
-  padding: 2rem 4rem;
 }
