--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -10,6 +10,7 @@
   border-radius: 3px;
   font-size: 1.4rem;
   margin-right: 1rem;
+  margin-bottom: 1rem;
   padding: 0.5rem 1rem;
   font-family: var(--primary-font);
 }
