--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -2,7 +2,7 @@
   width: 15rem;
   filter: brightness(10);
   animation: rotate 2s linear infinite;
-  margin: 2rem 0;
+  margin: 2rem auto;
 }
 
 @keyframes rotate {
