--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -33,3 +33,16 @@
 .sidebar__btn-close:hover {
   color: var(--hover);
 }
+
+.sidebar__content {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar__content img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+  margin-top: 1rem;
+}
