--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -17,7 +17,9 @@
 }
 
 .sidebar__title {
-  margin-top: 2rem;
+  margin-top: 15rem;
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
 }
 
 .sidebar__btn-close {
@@ -37,14 +39,14 @@
 }
 
 .sidebar__content {
-  margin-top: 2rem;
+  margin-left: 1rem;
   display: flex;
   flex-direction: column;
+  width: 90%;
+  text-align: left;
+  font-size: 1.3rem;
 }
 
-.sidebar__content img {
-  width: 5rem;
-  height: 5rem;
-  object-fit: cover;
-  margin-top: 1rem;
+.sidebar__data {
+  margin-bottom: 1rem;
 }
