--- a/styles/Pagination.module.css
+++ b/styles/Pagination.module.css
@@ -13,9 +13,15 @@
   background-color: transparent;
   color: var(--light);
   margin: 0 1rem;
+  cursor: pointer;
 }
 
-.btn_disabled {
+.btn_disbl {
+  font-size: 1.5rem;
+  border: none;
+  background-color: transparent;
+  color: var(--light);
+  margin: 0 1rem;
   opacity: 0.3;
   cursor: default;
   pointer-events: none;
