feat: add search input

--- a/styles/Limitation.module.css
+++ b/styles/Limitation.module.css
@@ -15,7 +15,12 @@
   margin: 0 1rem;
 }
 
-.btn_disabled {
+.btn_disbl {
+  font-size: 1.5rem;
+  border: none;
+  background-color: transparent;
+  color: var(--light);
+  margin: 0 1rem;
   opacity: 0.3;
   cursor: default;
   pointer-events: none;
