--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -8,8 +8,10 @@
   position: fixed;
   top: 0;
   right: 0;
+  margin-left: auto;
   opacity: 1;
   transition: width opacity 0.5s;
+  background-color: blue;
 }
 
 .title {
