--- a/styles/SearchPage.module.css
+++ b/styles/SearchPage.module.css
@@ -1,8 +1,9 @@
 .search_page  {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
-  width: 70%;
+  width: 100%;
   padding: 6rem;
   background-color: red;
 }
