--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,31 @@
   margin-bottom: 2rem;
 }
 
+.error-boundary__btn {
+  background-color: var(--light);
+  border: 1px solid var(--light);
+  border-radius: 3px;
+  color: var(--light-dark);
+  cursor: pointer;
+  font-size: 1.4rem;
+  transition: all 0.3s ease;
+  padding: 0.5rem 1rem;
+  font-family: var(--primary-font);
+  margin: 2rem 2rem;
+}
+
+.error-boundary__btn:hover {
+  background-color: var(--error);
+}
+
+.fallback {
+  background-color: var(--light-dark);
+  color: var(--light);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-family: var(--primary-font);
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 20rem auto 0;
+  width: 80%;
+}
