--- a/styles/SearchInput.module.css
+++ b/styles/SearchInput.module.css
@@ -1,10 +1,17 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-bottom: 2rem;
+}
+
 .input {
   width: 20rem;
   border: 1px solid #ccc;
   border-radius: 3px;
   font-size: 1.4rem;
   margin-right: 1rem;
-  margin-bottom: 1rem;
   padding: 0.5rem 1rem;
   font-family: var(--primary-font);
 }
