--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,16 +36,17 @@
 }
 
 .error-boundary__btn {
+  width: 15rem;
   background-color: var(--light);
   border: 1px solid var(--light);
   border-radius: 3px;
   color: var(--light-dark);
   cursor: pointer;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   transition: all 0.3s ease;
   padding: 0.5rem 1rem;
   font-family: var(--primary-font);
-  margin: 2rem 2rem;
+  margin-left: auto;
 }
 
 .error-boundary__btn:hover {
