--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -1,6 +1,6 @@
 .details_page {
   display: block;
-  width: 40%;
+  width: 35%;
   height: 100vh;
   text-align: center;
   border-left: 1px solid var(--light-dark);
@@ -11,7 +11,6 @@
   margin-left: auto;
   opacity: 1;
   transition: width opacity 0.5s;
-  background-color: blue;
 }
 
 .title {
@@ -47,4 +46,13 @@
 
 .data {
   margin-bottom: 1rem;
+}
+
+.search_page {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  padding: 6rem 10rem 6rem 6rem;
 }
