--- a/src/components/HookForm.css
+++ b/src/components/HookForm.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  padding: 5rem;
+  padding: 0 5rem;
   align-items: center;
   text-align: center;
 }
@@ -26,7 +26,7 @@
   margin: 1rem 0.5rem;
   border-radius: 0.5rem;
   border: 1px solid #ccc;
-  background-color: #ccc;
+  background-color: #5b5b5b;
   cursor: pointer;
 }
 
@@ -54,4 +54,14 @@
 
 .sex-label {
   margin-right: 1.5rem;
+}
+
+.error::before {
+  content: attr(data-error);
+  color: red;
+  font-size: 0.8rem;
+  height: 1rem;
+  width: fit-content;
+  position: relative;
+  bottom: 0.1rem;
 }
