--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,27 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.container {
+  width: 100%;
+  padding: 0 5rem;
+  align-items: center;
+  text-align: center;
+}
+
+button.submit {
+  width: 15rem;
+  padding: 0.5rem;
+  margin: 1rem 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
+  background-color: #5b5b5b;
+  cursor: pointer;
+}
+
+button.submit:hover {
+  background-color: #646cff;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
