--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -11,6 +11,18 @@ h1 {
   justify-content: center;
   margin: 2rem 0;
 }
+.history {
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 90%;
+}
+
+.title-history {
+  text-align: center;
+  margin-top: 3rem;
+}
 
 table {
   width: 80%;
