--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,49 @@ button.submit:hover {
   background-color: #646cff;
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+input {
+  width: 20rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
+}
+
+.terms {
+  display: flex;
+  flex-direction: row;
+  width: 20rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.terms input {
+  width: fit-content;
+}
+
+.sex {
+  width: 20rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.sex input {
+  width: fit-content;
+}
+
+.sex-label {
+  margin-right: 1.5rem;
+}
+
 .error {
   height: 0.5rem;
 }
