--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -11,6 +11,7 @@ h2 {
   align-items: center;
   justify-content: center;
   margin: 2rem 0;
+  border-radius: 0.5rem;
 }
 
 .history {
@@ -21,8 +22,28 @@ h2 {
   width: 90%;
 }
 
-table {
+.history-img {
+  width: 8rem;
+  height: auto;
+  padding: 0.5rem;
+}
+
+.table-container {
+  overflow: hidden;
+  border-radius: 0.3rem;
+  border: 1px solid #ccc;
   width: 80%;
+}
+
+.table-container-history {
+  overflow: hidden;
+  border-radius: 0.3rem;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+table {
+  width: 100%;
   border-collapse: collapse;
   background-color: #5b5b5b;
 }
@@ -37,6 +58,7 @@ th,
 td {
   padding: 1rem;
   text-align: left;
+  font-weight: 600;
 }
 
 .new-data {
