--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -45,9 +46,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -128,6 +131,10 @@ input {
   width: fit-content;
   position: relative;
   bottom: 0.8rem;
+}
+
+.picture-input {
+  width: 16rem;
 }
 
 @media (prefers-color-scheme: light) {
